# QuantVSR

./: .gitignore  README.md  index.html  pyproject.toml
benchmarks/: .gitignore  eval_dover.py  eval_ewarp.py  eval_metrics.py  video_bilinear.py
benchmarks/DOVER/: dover.yml  dover_evaluator.py  dover_iqa.py  evaluate_a_set_of_videos.py  zero_shot_res_sensehdr.txt
benchmarks/RAFT/: .gitignore  Scores_with_CLIP_release.py  demo.py  env_zkw.md  ewarp.py  optical_flow_scores.py  train.py  warp_utils.py
benchmarks/RAFT/core/: raft.py
benchmarks/RAFT/networks/: spatial_corr_shim.py
benchmarks/RAFT/networks/channelnorm_package/: setup.py
benchmarks/RAFT/networks/correlation_package/: setup.py
benchmarks/RAFT/networks/resample2d_package/: pyproject.toml  setup.py
scripts/: calibration.py  gene_cali.py  infer_fp.py  inference.py
src/quantvsr/: __init__.py
src/quantvsr/core/calibrator/: calibrator.py
src/quantvsr/core/component/: __init__.py  lba.py  rot.py  stca.py
src/quantvsr/core/component/utils/: hadamard.py
src/quantvsr/core/config/: __init__.py  calibrator.py  component.py  layer.py  model.py  quantizer.py
src/quantvsr/core/layer/: __init__.py  base.py  conv.py  linear.py
src/quantvsr/core/model/: __init__.py  quantvsr.py
src/quantvsr/core/observer/: __init__.py  stca.py
src/quantvsr/core/quantizer/: __init__.py  base.py  dynamic.py  static.py
src/quantvsr/data/: __init__.py  sr_datasets.py
src/quantvsr/models/: __init__.py  base.py  registry.py
src/quantvsr/models/mgldvsr/: __init__.py  model.py
src/quantvsr/models/mgldvsr/configs/mgldvsr/: mgldvsr_512_realbasicvsr_deg.yaml
src/quantvsr/models/mgldvsr/configs/video_vae/: video_autoencoder_kl_64x64x4_resi.yaml
src/quantvsr/models/mgldvsr/ldm/: __init__.py
src/quantvsr/models/mgldvsr/ldm/models/: autoencoder.py
src/quantvsr/models/mgldvsr/ldm/models/diffusion/: ddpm.py
src/quantvsr/models/mgldvsr/ldm/modules/: attention.py
src/quantvsr/models/mgldvsr/ldm/modules/diffusionmodules/: openaimodel.py  util.py
src/quantvsr/models/mgldvsr/ldm/modules/encoders/: modules.py
src/quantvsr/models/mgldvsr/scripts/: inference.py  ptq_quant_single.py  run_cali.py  util_image.py  vsr_val_ddpm_text_T_vqganfin_oldcanvas_tile.py
src/quantvsr/utils/: __init__.py  logger.py  utils.py
static/css/: index.css
